fix mathjax in episode 3

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% include mathjax.html %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="last-modified" content="{{ site.time }}">
